Sutter Health/src/objects/Sold_Sign_Off__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <formula>Quote__r.RFP_Form__r.Opportunity__r.Account.Account_Executive__r.FirstName &amp; &apos; &apos; &amp; Quote__r.RFP_Form__r.Opportunity__r.Account.Account_Executive__r.LastName</formula>
        <label>Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Quote__r.RFP_Form__r.Opportunity__r.Account.Account_Manager__r.FirstName &amp; &apos; &apos; &amp;  Quote__r.RFP_Form__r.Opportunity__r.Account.Account_Manager__r.LastName</formula>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RecordType_Name__c</fullName>
        <formula>Quote__r.Account_RecordType_Name__c</formula>
        <label>Tech Account RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Quote__r.RFP_Form__r.Opportunity__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Assumed Subscribers Enrolling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BOR__c</fullName>
        <formula>Quote__r.RFP_Form__r.Opportunity__r.Broker_of_Record__c</formula>
        <label>BOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <formula>Quote__r.RFP_Form__r.Opportunity__r.Broker_Rep1__r.FirstName &amp; &apos; &apos; &amp; Quote__r.RFP_Form__r.Opportunity__r.Broker_Rep1__r.LastName</formula>
        <label>Broker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Firm__c</fullName>
        <formula>Quote__r.RFP_Form__r.Opportunity__r.Broker1__r.Name</formula>
        <label>Brokerage Firm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <formula>Text(Opportunity_ID__r.Medical_Commission_Type__c)</formula>
        <label>Medical Commission Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Months__c</fullName>
        <label>Contract Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <formula>IF(Opportunity_ID__r.Account.DBA__c != NULL &amp;&amp; Opportunity_ID__r.Account.DBA__c != &apos;&apos;,Opportunity_ID__r.Account.DBA__c,&apos;N/A&apos;)</formula>
        <label>DBA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Zip__c</fullName>
        <formula>Quote__r.RFP_Form__r.Opportunity__r.Account.BillingPostalCode</formula>
        <label>ER Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_employer_Type__c</fullName>
        <formula>IF(TEXT(Opportunity_ID__r.Account.Employer_Type__c) != NULL &amp;&amp; TEXT(Opportunity_ID__r.Account.Employer_Type__c) != &apos;&apos;,TEXT(Opportunity_ID__r.Account.Employer_Type__c),&apos;N/A&apos;)</formula>
        <label>Email employer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <formula>Quote__r.RFP_Form__r.Opportunity__r.Account.Name</formula>
        <label>Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Type__c</fullName>
        <formula>Quote__r.Employer_Type__c</formula>
        <label>Employer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Subs__c</fullName>
        <label>Estimated Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Submitter_Name__c</fullName>
        <label>Form Submitter Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Child_Record_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Child Record Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Commission__c</fullName>
        <formula>Opportunity_ID__r.Commission__c</formula>
        <label>Medical Commission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTE__c</fullName>
        <label>NTE %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NTE_in_Place__c</fullName>
        <label>NTE in Place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Business_SSO_or_Renewal_RSO__c</fullName>
        <label>New Business (SSO) or Renewal (RSO)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SSO</fullName>
                </value>
                <value>
                    <fullName>RSO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Renewal_Date__c</fullName>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sold Sign Offs</relationshipLabel>
        <relationshipName>Sold_Sign_Offs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Name__c</fullName>
        <formula>TEXT(Quote__r.RFP_Form__r.Opportunity__r.StageName)</formula>
        <label>Opportunity Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <formula>Quote__r.Plan_Year__c</formula>
        <label>Tech Plan Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Sold Sign Offs</relationshipLabel>
        <relationshipName>Sold_Sign_Offs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Form__c</fullName>
        <formula>Quote__r.RFP_Form__r.Name</formula>
        <label>RFP Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Rates</fullName>
                </value>
                <value>
                    <fullName>Effective Date Missing</fullName>
                </value>
                <value>
                    <fullName>Effective Date Incorrect</fullName>
                </value>
                <value>
                    <fullName>Sold Rates Missing</fullName>
                </value>
                <value>
                    <fullName>Sold Rates Incorrect</fullName>
                </value>
                <value>
                    <fullName>Missing Plan ID</fullName>
                </value>
                <value>
                    <fullName>Quote Type Missing</fullName>
                </value>
                <value>
                    <fullName>Slice Carriers Missing</fullName>
                </value>
                <value>
                    <fullName>Commission Missing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Year_NTE_Applies__c</fullName>
        <label>Renewal Year NTE Applies</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSO_RSO_Due_Date__c</fullName>
        <label>SSO/RSO  Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Slicing_with_Carrier_Name__c</fullName>
        <label>Slicing with Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_Comments__c</fullName>
        <label>Special Instructions/Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted to Underwriting</fullName>
                </value>
                <value>
                    <fullName>Approved by Underwriting</fullName>
                </value>
                <value>
                    <fullName>Rejected by Underwriting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR_Dual_Triple_Slice__c</fullName>
        <label>Proposal Scenario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>Slice</fullName>
                </value>
                <value>
                    <fullName>Triple Option</fullName>
                </value>
                <value>
                    <fullName>TR &amp; Slice</fullName>
                </value>
                <value>
                    <fullName>Slice &amp; Triple Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Account_Id__c</fullName>
        <formula>IF(Quote__c &lt;&gt; NULL , Quote__r.Tech_Account_Id__c , Opportunity_ID__r.AccountId )</formula>
        <label>Tech Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Quote_Status__c</fullName>
        <formula>TEXT(Quote__r.Stage__c)</formula>
        <label>Tech Quote Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>regenerate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>regenerate?</label>
        <type>Checkbox</type>
    </fields>
    <label>Sold Sign Off</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Quote__c</columns>
        <columns>Stage__c</columns>
        <columns>SSO_RSO_Due_Date__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Next_Renewal_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rejection_Reason__c</field>
            <operation>notEqual</operation>
            <value>Void</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Queue</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Quote__c</columns>
        <columns>Stage__c</columns>
        <columns>SSO_RSO_Due_Date__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Next_Renewal_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Rejection_Reason__c</field>
            <operation>notEqual</operation>
            <value>Void</value>
        </filters>
        <label>My Queue</label>
    </listViews>
    <listViews>
        <fullName>SHP_Sales_Queue_Sold_Sign_Off</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Quote__c</columns>
        <columns>Stage__c</columns>
        <columns>SSO_RSO_Due_Date__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Next_Renewal_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Sales Queue</label>
        <queue>SHP_Sales_Queue</queue>
        <sharedTo>
            <group>SHP_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Underwriter_Queue_Sold_Sign_Off</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Quote__c</columns>
        <columns>Stage__c</columns>
        <columns>SSO_RSO_Due_Date__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Next_Renewal_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Underwriter Queue</label>
        <queue>SHP_Underwriter_Queue</queue>
        <sharedTo>
            <group>Underwriter</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Void_Queue_Sold_Sign_Off</fullName>
        <columns>NAME</columns>
        <columns>Employer_Type__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Quote__c</columns>
        <columns>Stage__c</columns>
        <columns>SSO_RSO_Due_Date__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Next_Renewal_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Void Queue</label>
        <queue>SHP_Void_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SSO-{000000}</displayFormat>
        <label>Sold Sign Off  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sold Sign Offs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HR_SSO_VR01_DueDateMandatory</fullName>
        <active>true</active>
        <description>This rule will fire at the time of modifications. For new record, this will not fire</description>
        <errorConditionFormula>AND(ISNULL(SSO_RSO_Due_Date__c ),NOT(ISNEW()),NOT(ISCHANGED(Is_Child_Record_Created__c)))</errorConditionFormula>
        <errorDisplayField>SSO_RSO_Due_Date__c</errorDisplayField>
        <errorMessage>Please enter SSO/RSO Due Date.</errorMessage>
    </validationRules>
</CustomObject>